# domo-scheduled-ext-reporting

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  crontab.txt.example  docker-compose.override.yaml.example  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  scheduled-reports.yaml.example
app/: runtime.py
app/alerts/: __init__.py  conditions.py  context.py
app/cli/: __init__.py  doctor.py  init_wizard.py  listing.py
app/configuration/: card_resolver.py  report_loader.py  settings.py
app/configuration/arg_parser/: arg_parser_config.py
app/destinations/: base.py  context.py  email.py  file.py  registry.py  slack.py  teams.py
app/engines/: JAR_VERSION.json  __init__.py  base.py  jar.py  jar_download_cli.py  jar_downloader.py  registry.py  rest.py
app/history/: __init__.py  base.py  null.py  postgres.py  registry.py  sqlite.py
app/observability/: __init__.py  metrics.py  server.py
app/scheduler/: runner.py
app/service_manager/: exceptions.py  manager.py
app/services/: base.py
app/services/examples/: __init__.py  example_python_report.py
app/templating/: __init__.py  engine.py
app/utils/: domo_util.py  image_util.py  logger.py  project_setup_util.py  project_updates_util.py
app/web/: __init__.py  app.py  auth.py  config.py  deps.py
app/web/routes/: __init__.py  auth.py  destinations.py  health.py  reports.py  runs.py
app/web/static/: styles.css
app/web/storage/: __init__.py  yaml_store.py
app/web/templates/: base.html  login.html
app/web/templates/_partials/: nav.html
app/web/templates/reports/: edit.html  list.html
app/web/templates/runs/: list.html  show.html
config/: schedule.yaml.example
config/reports/: example_slack_report.yaml  example_teams_report.yaml
cron/: example-report.sh
docs/: architecture.md  migration_v1_to_v2.md
tests/: conftest.py  factories.py  test_arg_parser.py  test_card_resolver.py  test_destinations_slack.py  test_destinations_teams.py  test_domo_util_shim.py  test_dry_run.py  test_image_util.py  test_jar_downloader.py  test_project_setup_util.py  test_property_templating.py  test_report_loader.py  test_scaffolder.py  test_service_manager.py  test_settings.py  test_template_engine.py
tests/alerts/: test_conditions.py  test_context.py  test_dispatch_integration.py  test_security.py  test_yaml_send_when.py
tests/cli/: test_doctor.py  test_init_wizard.py  test_listing.py
tests/destinations/: test_email_destination.py  test_file_destination.py  test_slack_threading.py  test_teams_v2_payload.py  test_yaml_datasets.py
tests/e2e/: test_yaml_to_destination_pipeline.py
tests/engines/: test_engine_contract.py  test_engine_registry.py  test_jar_engine.py  test_rest_engine.py
tests/history/: test_history_integration.py  test_history_registry.py  test_metrics.py  test_null_backend.py  test_sqlite_history.py
tests/web/: conftest.py  test_auth.py  test_config.py  test_destination_test_endpoint.py  test_health.py  test_reports_crud.py  test_runs.py  test_yaml_store.py  test_yaml_store_property.py
