[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domo-scheduled-ext-reporting"
version = "1.0.0"
description = "Send scheduled Domo card images and dataset reports to Slack and Microsoft Teams."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tyler Shepherd" },
]
keywords = ["domo", "slack", "microsoft-teams", "reporting", "automation", "bi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # Core
    "pandas>=2.2,<3",
    "pillow>=10.4,<12",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "tenacity>=9.0,<10",

    # Scheduling
    "apscheduler>=3.10,<4",

    # Slack
    "slack_sdk>=3.33,<4",
    "certifi>=2024.8.30",

    # Microsoft Teams (Graph API)
    "msal>=1.30,<2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<26",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
]

[project.scripts]
domo-report = "main:main"

[project.urls]
Homepage = "https://github.com/tyler-shepherd/domo-scheduled-ext-reporting"
Repository = "https://github.com/tyler-shepherd/domo-scheduled-ext-reporting"
Issues = "https://github.com/tyler-shepherd/domo-scheduled-ext-reporting/issues"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"app.utils" = ["domoUtil.jar"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
