[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domo-scheduled-ext-reporting"
version = "1.0.0"
description = "Send scheduled Domo card images and dataset reports to Slack and Microsoft Teams."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tyler Shepherd" },
]
keywords = ["domo", "slack", "microsoft-teams", "reporting", "automation", "bi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # Core
    "pandas>=2.2,<3",
    "pillow>=10.4,<12",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "tenacity>=9.0,<10",

    # Scheduling
    "apscheduler>=3.10,<4",

    # Slack
    "slack_sdk>=3.33,<4",
    "certifi>=2024.8.30",

    # Microsoft Teams (Graph API)
    "msal>=1.30,<2",

    # Email + Jinja2 templating (also used by the web UI)
    "jinja2>=3.1,<4",
    "markdown>=3.6,<4",

    # Sandboxed Python expression evaluator for `send_when:` conditions
    "asteval>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<26",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "responses>=0.25,<1",
    "freezegun>=1.5,<2",
    "prometheus_client>=0.20,<1",
    "openpyxl>=3.1,<4",
    "rich>=13.7,<14",
    "httpx>=0.27,<1",
    "fastapi>=0.115,<1",
    "ruamel.yaml>=0.18,<1",
    "passlib[argon2]>=1.7,<2",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.9,<1",
    "hypothesis>=6.100,<7",
    "syrupy>=4.7,<6",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]
metrics = [
    "prometheus_client>=0.20,<1",
]
xlsx = [
    "openpyxl>=3.1,<4",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "ruamel.yaml>=0.18,<1",
    "passlib[argon2]>=1.7,<2",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.9,<1",
]

[project.scripts]
domo-report = "main:main"

[project.urls]
Homepage = "https://github.com/TylerShep/domo-scheduled-ext-reporting"
Repository = "https://github.com/TylerShep/domo-scheduled-ext-reporting"
Issues = "https://github.com/TylerShep/domo-scheduled-ext-reporting/issues"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# JAR version metadata + the downloader's pinned checksums ship inside the
# package. The JAR binary itself is NOT bundled -- fetch it via
# `domo-report --download-jar` (or the Dockerfile's INSTALL_JRE=true build arg).
"app.engines" = ["JAR_VERSION.json"]
# Web UI assets (templates + static) are distributed with the package so the
# `[web]` extras "just work" after `pip install`.
"app.web" = ["templates/**/*.html", "static/*.css", "static/*.js"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # Line length handled by black
    # FastAPI's Depends()/Body()/Query() are canonically used in parameter
    # defaults; B008 flags that pattern everywhere and is a false positive
    # for DI frameworks.
    "B008",
    # `zip(strict=True)` was added in 3.10; we support 3.10+ but all our zip
    # callers use equal-length sequences by construction.
    "B905",
    # empty `prepare()`/`teardown()` hooks in the Destination ABC are
    # intentional no-op defaults that subclasses can override.
    "B027",
]

[tool.ruff.lint.per-file-ignores]
# Tests use broad-exception asserts where narrower matching would be noise.
"tests/**" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    # passlib>=1.7 still imports the stdlib `crypt` module which Python 3.13
    # removed. Silenced until a newer release is on PyPI.
    "ignore:'crypt' is deprecated:DeprecationWarning",
    # argon2-cffi moved its __version__ into importlib metadata; passlib hits
    # the legacy attribute at import time. Upstream issue.
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/scheduler/*",
    "app/observability/server.py",
    "app/cards_metadata/*",
    # Requires a live Postgres instance; tested through SQLite path.
    "app/history/postgres.py",
    # Standalone CLI entrypoints -- module-level `if __name__ == "__main__":`
    # is already excluded but the top-level bodies run inside entry scripts.
    "app/engines/jar_download_cli.py",
    "main.py",
    # Example reports bundled for docs; not part of the runtime app surface.
    "app/services/examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
